[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
  {name = "Gelzieny R. Martins",email = "gelzieny.martins@goias.gov.br"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  'fastapi[standard]>=0.115.13,<0.116.0'
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"
ruff = "^0.12.0"

